--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
             <tr>
                 <th scope="row">{{ product.id }}</th>
                 <td>{{ product.title }}</td>
-                <td>{{ product.cost }}</td>
-                <td>{{ product.count }}</td>
+                <td>{{ product.price }}</td>
+                <td>{{ product.quantity }}</td>
                 <td>{{ product.category.title }}</td>
             </tr>
         {% endfor %}
